<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help_center">Help Center</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_account">Account</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_help">Help</string>
    <string name="my_cart">My Cart</string>
    <string name="empty_cart_message">Your cart is empty\nStart adding some delicious coffees!</string>
    <string name="total">Total</string>
    <string name="my_orders">My Orders</string>
    <string name="no_orders_yet">No orders yet\nYour orders will appear here</string>
    <string name="start_new_order">Start new order</string>
    <string name="new_order">New Order</string>
    <string name="purchase" tools:ignore="ResourceName">Purchase</string>
</resources>